テーブルの追加

--- a/app/views/index/top.html.slim
+++ b/app/views/index/top.html.slim
@@ -28,6 +28,8 @@ body
               | ・黒猫の画像が4枚表示されるので、その中から🐈こむちゃん🐈
               strong ではない
               | 黒猫を選んでください。
+            p 
+              | （うちの猫を見てほしいだけのクイズなので、このような特殊な選択肢にしています）
             p
               | ・🐈こむちゃん🐈の参考資料は、トップページのスライドに掲載しているので、参考にしてください。
             br
