--- a/app/views/blackcat_quizzes/top.html.slim
+++ b/app/views/blackcat_quizzes/top.html.slim
@@ -29,7 +29,7 @@ body
               strong ではない
               | 黒猫を選んでください。
             p 
-              | （うちの猫を見てほしいだけのクイズなので、このような特殊な選択肢にしています）
+              | （うちの猫を見てほしいだけのクイズなので、このような選択肢を採用してみました）
             p
               | ・🐈こむちゃん🐈の参考資料は、トップページのスライドに掲載しているので、参考にしてください。
             br
