storageエラー修正

--- a/app/views/blackcat_quizzes/top.html.slim
+++ b/app/views/blackcat_quizzes/top.html.slim
@@ -33,7 +33,7 @@ body
             p
               | ・🐈こむちゃん🐈の参考資料は、トップページのスライドに掲載しているので、参考にしてください。
             br
-            = link_to "クイズスタート", "#", class: "btn btn-dark"  
+            = link_to "クイズスタート", blackcat_quiz_path(0), class: "btn btn-dark"  
 
   script src="https://code.jquery.com/jquery-3.6.0.min.js"
   script src="https://unpkg.com/swiper/swiper-bundle.min.js"
