--- a/app/views/blackcat_quizzes/show.html.slim
+++ b/app/views/blackcat_quizzes/show.html.slim
@@ -6,4 +6,4 @@
     - @question.choices.each do |choice|
       = form_with url: answer_blackcat_quiz_path(@question), method: :post do
         = hidden_field_tag :choice_id, choice.id
-        = image_tag url_for(choice.image), class: "choice-image", onclick: "this.parentNode.submit();" if choice.image.attached?
+        = image_tag choice.image.url, class: "choice-image", onclick: "this.parentNode.submit();" if choice.image.present?
