--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -43,5 +43,17 @@
 .choice-image {
   width: 300px;
   height: 400px;
-  object-fit: cover; /* 画像が縦横比を保ちつつ収まるように */
+  object-fit: cover;
+  margin: 0 10px;
+  transition: transform 0.3s;
+}
+
+.choice-image:hover {
+  transform: translateY(-10px);
+}
+
+.select-image {
+  width: 300px;
+  height: 400px;
+  object-fit: cover;
 }
