--- a/app/views/blackcat_quizzes/result.html.slim
+++ b/app/views/blackcat_quizzes/result.html.slim
@@ -1,7 +1,7 @@
 .row(style="justify-content: center;")
   .col-sm-6.col-12h2
     h1 結果発表
-    p あなたの正解数: #{@score}/5
+    p あなたの正解数: #{@score}問正解！/4問中
 
     h2 解説
     - @answers.each do |answer|
@@ -9,13 +9,18 @@
       - choice = Choice.find(answer['choice_id'])
       p 
       strong 問題:
-      = question.content
+      = question.id
       p 
-      strong あなたの選択:
+      strong あなたの選んだ写真:
       br
-      = image_tag choice.image.url, class: "choice-image" if choice.image.present?
+      = image_tag choice.image.url, class: "select-image" if choice.image.present?
+      p 
+      strong 正解の写真:
+      br
+      = image_tag choice.image.url, class: "select-image"
       p 
       strong 解説:
       = question.explanation
-
-    = link_to "もう一度プレイ", root_path, class: "btn btn-dark"
+    .centered
+      = link_to "もう一度プレイ", "#", id: "retry-button", class: "btn btn-dark"
+      br
