--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,15 +1,16 @@
 .top-wrapper {
-  height: calc(100vh - 134px);
+  min-height: 100vh;
+  padding-bottom: 30px;
   position: relative;
   overflow: hidden;
 
   .top-inner-text {
     position: absolute;
     background-color: rgba(255, 255, 255, 0.5); 
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
+    width: 150%;
     text-align: center;
     font-size: 3rem;
     color: rgb(0, 0, 0);
@@ -31,13 +32,13 @@
       object-fit: cover;
     }
   }
-
-.centered {
-  text-align: center;
-}
   
 .centered p {
-  margin: 0;
+  margin-left: 0;
+}
+
+.centered p::before {
+  display: inline-block;
 }
 
 .choice-image {
@@ -45,11 +46,12 @@
   height: 400px;
   object-fit: cover;
   margin: 0 10px;
-  transition: transform 0.3s;
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .choice-image:hover {
-  transform: translateY(-10px);
+  transform: translateY(-5px);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
 }
 
 .select-image {
