--- a/app/views/blackcat_quizzes/top.html.slim
+++ b/app/views/blackcat_quizzes/top.html.slim
@@ -12,27 +12,30 @@ body
             .swiper-slide
               img src=image_path('top1.jpg') alt="Image 1"
             .swiper-slide
-              img src=image_path('top2.jpg')  alt="Image 2"
+              img src=image_path('top2.jpg') alt="Image 2"
             .swiper-slide
-              img src=image_path('top3.jpg')  alt="Image 3"
+              img src=image_path('top3.jpg') alt="Image 3"
             .swiper-slide
-              img src=image_path('top4.jpg')  alt="Image 4"
+              img src=image_path('top4.jpg') alt="Image 4"
             .swiper-slide
-              img src=image_path('top5.jpg')  alt="Image 5"
+              img src=image_path('top5.jpg') alt="Image 5"
           br
           div style="text-align: center;"
             p style="font-size: 36px;" 
               strong 遊び方
           .centered
             p 
-              | ・黒猫の画像が4枚表示されるので、その中から🐈こむちゃん🐈
+              |  ・黒猫の画像が4枚表示されるので、その中から🐈こむちゃん🐈
               strong ではない
               | 黒猫を選んでください。
-            p 
-              | （うちの猫を見てほしいだけのクイズなので、このような選択肢を採用してみました）
+              br
+              | （うちの猫を見てほしいだけのクイズなので、このような選択肢を採用しています）
             p
               | ・🐈こむちゃん🐈の参考資料は、トップページのスライドに掲載しているので、参考にしてください。
-            br
+            strong
+              | ・トップページまでブラウザバックした時、上手く表示されない場合がありますので、一度画面をリロードしてください
+          br
+          div style="text-align: center;"
             = link_to "クイズスタート", blackcat_quiz_path(0), class: "btn btn-dark"  
 
   script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -45,7 +48,6 @@ body
     |       delay: 3000,
     |     },
     |    slidesPerView: 2,
-    |    spaceBetween: 5,
     |    slidesPerGroup: 1,
     |   });
     | });
