--- a/app/views/blackcat_quizzes/show.html.slim
+++ b/app/views/blackcat_quizzes/show.html.slim
@@ -6,9 +6,9 @@
       | 次の4枚の写真から、こむちゃんではない猫を選んでください
     p
       br
-      | 4枚の写真がありますが、3枚はこむちゃん、1枚が違う猫の写真です
+      | 下に合計4枚の写真がありますが、うち3枚はこむちゃん、残り1枚が違う猫の写真です
       br
-      | 写真をクリックするとそれが回答になりますので、注意してください🐈
+      | 写真をクリックすると回答となり次の問題に進みますので、よく考えて選択してください🐈
 
     - @question.choices.each_slice(2) do |pair|
       .choice-pair(style="display: flex; justify-content: center; margin-bottom: 20px;")
