--- a/app/views/blackcat_quizzes/show.html.slim
+++ b/app/views/blackcat_quizzes/show.html.slim
@@ -1,3 +1,4 @@
+= content_for(:title, "問題#{session[:question_index] + 1}")
 .row(style="justify-content: center;")
   .col-sm-6.col-12h2.text-center
     h2 style="font-size: 2em;" 🐈問題#{session[:question_index] + 1}🐈
