--- a/app/views/blackcat_quizzes/result.html.slim
+++ b/app/views/blackcat_quizzes/result.html.slim
@@ -32,7 +32,7 @@
         p style="margin-right: 20px;"
           strong あなたの選んだ写真
           br
-          = image_tag choice.image, class: "select-image" if choice.image.present?
+          = image_tag choice.image_path, class: "select-image" if choice.image.present?
         p 
           strong 正解の写真（こむちゃんではない猫）
           br
