--- a/app/views/blackcat_quizzes/top.html.slim
+++ b/app/views/blackcat_quizzes/top.html.slim
@@ -22,7 +22,7 @@ body
           br
           div style="text-align: center;"
             p style="font-size: 36px;" 
-              strong 遊び方
+              strong 🐈遊び方🐈
           .centered
             p 
               |  ・黒猫の画像が4枚表示されるので、その中から🐈こむちゃん🐈
@@ -33,7 +33,7 @@ body
             p
               | ・🐈こむちゃん🐈の参考資料は、トップページのスライドに掲載しているので、参考にしてください。
             strong
-              | ・トップページまでブラウザバックした時、上手く表示されない場合がありますので、一度画面をリロードしてください
+              | ・トップページまでブラウザバックした時、上手く表示されない場合がありますので、一度画面をリロードするか、左上のロゴをクリックしてください
           br
           div style="text-align: center;"
             = link_to "クイズスタート", blackcat_quiz_path(0), class: "btn btn-dark"  
@@ -51,4 +51,3 @@ body
     |    slidesPerGroup: 1,
     |   });
     | });
-
