--- a/app/views/blackcat_quizzes/show.html.slim
+++ b/app/views/blackcat_quizzes/show.html.slim
@@ -1,7 +1,7 @@
 = content_for(:title, "問題#{session[:question_index] + 1}")
 .row(style="justify-content: center;")
   .col-sm-6.col-12h2.text-center
-    h2 style="font-size: 2em;" 🐈問題#{session[:question_index] + 1}🐈
+    h2 style="font-size: 36px;" 🐈問題#{session[:question_index] + 1}🐈
     br
     strong style="font-size: 1.5em;"
       | 次の4枚の写真から、こむちゃんではない猫を選んでください
