--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,10 +1,7 @@
 header
-  .container(style="background-color: black; color: white; width: 100%;")
-    .row
-      .col-sm-6.col-12
-        = link_to '/', class: 'navbar-brand' do
-        = image_tag 'top1.jpg', width: '40', height: '40'
-
-
-        
-//画像は適当に書いて差し替える
+  .container(style="background-color: black; color: white; width: 100%; padding: 10px;")
+    .row.align-items-center
+      .col-sm-6.col-12.d-flex.align-items-center
+        = link_to "#", class: "retry-button", style: "display: flex; align-items: center; text-decoration: none; color: white;" do
+          = image_tag 'title_logo.jpg', width: '152', height: '57', alt: 'タイトルロゴ'
+        span style="margin-left: 10px;" ←この画像をクリックするとトップページへ移動します
