--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -2,6 +2,6 @@ header
   .container(style="background-color: black; color: white; width: 100%; padding: 10px;")
     .row.align-items-center
       .col-sm-6.col-12.d-flex.align-items-center
-        = link_to "#", class: "retry-button", style: "display: flex; align-items: center; text-decoration: none; color: white;" do
+        = link_to "#", id: 'retry-button', style: "display: flex; align-items: center; text-decoration: none; color: white;" do
           = image_tag 'title_logo.jpg', width: '152', height: '57', alt: 'タイトルロゴ'
         span style="margin-left: 10px;" ←この画像をクリックするとトップページへ移動します
