--- a/app/views/blackcat_quizzes/top.html.slim
+++ b/app/views/blackcat_quizzes/top.html.slim
@@ -39,4 +39,4 @@ body
             = link_to "クイズスタート", blackcat_quiz_path(0), class: "btn btn-dark", data: { reload: "true" }
 
   script src="https://code.jquery.com/jquery-3.6.0.min.js"
-  script src="https://unpkg.com/swiper/swiper-bundle.min.js"
+  script src="https://unpkg.com/swiper@8.4.7/swiper-bundle.min.js"
