--- a/app/views/blackcat_quizzes/show.html.slim
+++ b/app/views/blackcat_quizzes/show.html.slim
@@ -11,7 +11,7 @@
       br
       | 写真をクリックすると回答となり次の問題に進みますので、よく考えて選択してください🐈
 
-    - @question.choices.each_slice(2) do |pair|
+    - @question.choices.shuffle.each_slice(2) do |pair|
       .choice-pair(style="display: flex; justify-content: center; margin-bottom: 20px;")
         - pair.each do |choice|
           = form_with url: answer_blackcat_quiz_path(@question), method: :post do
