add:新しいコントローラー

--- a/app/views/blackcat_quizzes/show.html.slim
+++ b/app/views/blackcat_quizzes/show.html.slim
@@ -1,4 +1,4 @@
-= content_for(:title, "難易度中：問題#{session[:question_index] + 1}")
+= content_for(:title, "中級：問題#{session[:question_index] + 1}")
 .row(style="justify-content: center;")
   .col-sm-6.col-12h2.text-center
     h2 style="font-size: 36px;" 🐈問題#{session[:question_index] + 1}🐈
