--- a/app/views/komkomcat_quizzes/show.html.slim
+++ b/app/views/komkomcat_quizzes/show.html.slim
@@ -1,4 +1,4 @@
-= content_for(:title, "難易度高：問題#{session[:question_index] + 1}")
+= content_for(:title, "上級：問題#{session[:question_index] + 1}")
 .row(style="justify-content: center;")
   .col-sm-6.col-12h2.text-center
     h2 style="font-size: 36px;" 🐈問題#{session[:question_index] + 1}🐈
@@ -7,13 +7,15 @@
       | 次の4枚の写真から、こむちゃんではない猫を選んでください
     p
       br
-      | 下に合計4枚の写真がありますが、うち3枚はこむちゃん、残り1枚が違う猫の写真です
+      | 下に合計5枚の写真がありますが、うち4～5枚はこむちゃん、残り1枚が違う猫の写真です
+      br
+      | 全部こむちゃんである可能性があり、その場合は「写真は全てこむちゃん」を選んでください
       br
       | 写真をクリックすると回答となり次の問題に進みますので、よく考えて選択してください🐈
 
-    - @question.choices.shuffle.each_slice(2) do |pair|
+    - @difficult_question.choices.shuffle.each_slice(2) do |pair|
       .choice-pair(style="display: flex; justify-content: center; margin-bottom: 20px;")
         - pair.each do |choice|
-          = form_with url: answer_blackcat_quiz_path(@question), method: :post do
+          = form_with url: answer_komkomcat_quiz_path(@difficult_question), method: :post do
             = hidden_field_tag :choice_id, choice.id
             = image_tag choice.image_path, class: "choice-image", onclick: "this.parentNode.submit();" if choice.image.present?
