--- a/app/views/blackcat_quizzes/top.html.slim
+++ b/app/views/blackcat_quizzes/top.html.slim
@@ -35,8 +35,10 @@ body
             strong
               | ・トップページまでブラウザバックした時、上手く表示されない場合がありますので、一度画面をリロードするか、左上のロゴをクリックしてください
           br
-          div style="text-align: center;"
-            = link_to "クイズスタート", blackcat_quiz_path(0), class: "btn btn-dark", data: { reload: "true" }
+          div style="display: flex; justify-content: center; gap: 20px; margin-top: 20px;"
+            button.btn.btn-light disabled=true 初級問題(準備中)
+            = link_to "中級問題をスタート", blackcat_quiz_path(0), class: "btn btn-secondary", data: { reload: "true" }
+            = link_to "上級問題をスタート", komkomcat_quiz_path(0), class: "btn btn-dark", data: { reload: "true" }
 
   script src="https://code.jquery.com/jquery-3.6.0.min.js"
   script src="https://unpkg.com/swiper@11.2.6/swiper-bundle.min.js"
