add:トップページのスライドを追加

--- a/app/views/blackcat_quizzes/top.html.slim
+++ b/app/views/blackcat_quizzes/top.html.slim
@@ -19,6 +19,8 @@ body
               img src=image_path('top4.jpg') alt="Image 4"
             .swiper-slide
               img src=image_path('top5.jpg') alt="Image 5"
+            .swiper-slide
+              img src=image_path('top6.jpg') alt="Image 6"
           br
           div style="text-align: center;"
             p style="font-size: 36px;" 
