--- a/app/views/blackcat_quizzes/result.html.slim
+++ b/app/views/blackcat_quizzes/result.html.slim
@@ -34,7 +34,7 @@
           br
           = image_tag choice.image_path, class: "select-image" if choice.image.present?
         p 
-          strong 正解の写真（こむちゃんではない猫）
+          strong 正解の写真
           br
           = image_tag question.correct_image_path, alt: "正解の画像", class: "select-image"
       strong style="font-size: 1.3em;" 解説
